--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Arial, sans-serif;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 50px;
+  margin-right: 10px;
+}
+
+.navbar-nav .nav-link {
+  font-size: 1.25rem;
+  color: green;
+}
+
+.navbar-nav .nav-link:hover {
+  color: darkgreen;
+}
+
+.dropdown-menu {
+  background-color: white;
+  border: 1px solid lightgray;
+}
+
+.dropdown-item {
+  font-size: 1rem;
+  color: green;
+}
+
+/*.dropdown-item:hover {*/
+/*  background-color: lightgray;*/
+/*}*/
+
+/* Enable dropdown on hover */
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0; /* removes the gap so it doesn't close */
+}
