Changes to shop component

--- a/src/app/components/header/navbar/shop/shop.component.html
+++ b/src/app/components/header/navbar/shop/shop.component.html
@@ -1,1 +1,4 @@
-<p>shop works!</p>
+<div class="container">
+  <app-filters (filtersChange)="onFiltersChange($event)"></app-filters>
+  <app-product-list [filters]="filters"></app-product-list>
+</div>
