--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -25,7 +25,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/galley">Gallery</a>
+        <a class="nav-link" routerLink="/gallery">Gallery</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/cart">Cart</a>
