--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -2,14 +2,14 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="/shop" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Shop
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
-          <a class="dropdown-item" routerLink="/all">All</a>
-          <a class="dropdown-item" routerLink="/oils">Oils</a>
-          <a class="dropdown-item" routerLink="/monotypes">Monotypes</a>
-          <a class="dropdown-item" routerLink="/prints">Prints</a>
+          <a class="dropdown-item" routerLink="/shop" routerLinkActive="active">All</a>
+          <a class="dropdown-item" [routerLink]="['/shop']" [queryParams]="{ type: 'OIL' }" routerLinkActive="active">Oils</a>
+          <a class="dropdown-item" [routerLink]="['/shop']" [queryParams]="{ type: 'MONOTYPE' }" routerLinkActive="active">Monotypes</a>
+          <a class="dropdown-item" [routerLink]="['/shop']" [queryParams]="{ type: 'PRINT' }" routerLinkActive="active">Prints</a>
         </div>
       </li>
       <li class="nav-item dropdown">
