--- a/src/app/components/header/navbar/shop/product-list/product-list.component.html
+++ b/src/app/components/header/navbar/shop/product-list/product-list.component.html
@@ -1,10 +1,10 @@
 <div class="main-content">
-  <div class="card shadow-sm" *ngFor="let painting of filteredPaintings">
+  <div class="card shadow-sm" *ngFor="let painting of filteredPaintings" (click)="painting.id && viewPainting(painting.id)">
     <img class="card-img-top img-fluid" [src]="painting.imageUrl" alt="{{ painting.name }}">
     <div class="card-body d-flex flex-column">
       <p class="card-text">{{ painting.name }}</p>
       <div class="mt-auto d-flex justify-content-between align-items-center">
-        <small class="text-muted">{{ painting.price | currency }}</small>
+        <small class="text-muted">{{ painting.price | currency:'EUR' }}</small>
       </div>
     </div>
   </div>
