--- a/src/app/components/shop/filters/filters.component.html
+++ b/src/app/components/shop/filters/filters.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar">
-  <h5>Filters</h5>
+  <h4>Filters</h4>
   <div>
     <h6>Paintings</h6>
     <div>
-      <input type="checkbox" id="oils" (change)="onFilterChange('paintings', 'OIL', $event)" [checked]="isChecked('paintings', 'OIL')">
-      <label for="oils">Oils</label>
+      <input type="checkbox" id="oil" (change)="onFilterChange('paintings', 'OIL', $event)" [checked]="isChecked('paintings', 'OIL')">
+      <label for="oil">Oil</label>
     </div>
     <div>
       <input type="checkbox" id="monotype" (change)="onFilterChange('paintings', 'MONOTYPE', $event)" [checked]="isChecked('paintings', 'MONOTYPE')">
