--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="/shop" id="navbarDropdownShop" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Shop
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownShop">
@@ -28,7 +28,7 @@
         <a class="nav-link" href="/gallery" [routerLink]="['/gallery']">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/cart" [routerLink]="['/cart']">Cart</a>
+        <a class="nav-link" href="/cart" routerLink="/cart">Cart</a>
       </li>
     </ul>
   </div>
