--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
+<app-header></app-header>
 <div class="container mt-4">
-  <app-logo></app-logo>
-  <app-additional-elements></app-additional-elements>
-  <app-navbar></app-navbar>
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
 </div>
+<app-footer></app-footer>
