--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -45,23 +45,17 @@
 <!--</form>-->
 
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-4 d-flex align-items-stretch mb-4" *ngFor="let painting of paintings">
-      <div class="card shadow-sm">
-        <img class="card-img-top img-fluid" [src]="painting.imageUrl" alt="{{ painting.name }}">
-        <div class="card-body d-flex flex-column">
-          <p class="card-text">{{ painting.name }}</p>
-          <div class="mt-auto d-flex justify-content-between align-items-center">
-            <small class="text-muted">{{ painting.price | currency }}</small>
-          </div>
+<div class="container mx-auto p-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="card shadow-sm" *ngFor="let painting of paintings">
+      <img class="card-img-top img-fluid w-full h-64 object-cover" [src]="painting.imageUrl" alt="{{ painting.name }}">
+      <div class="card-body d-flex flex-column p-4">
+        <p class="card-text text-lg font-semibold">{{ painting.name }}</p>
+        <div class="mt-auto d-flex justify-content-between align-items-center">
+          <small class="text-muted">{{ painting.price | currency }}</small>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-
-
-<!--</body>-->
-<!--</html>-->
