--- a/src/app/components/shop/filters/filters.component.css
+++ b/src/app/components/shop/filters/filters.component.css
@@ -1,9 +1,5 @@
-.sidebar {
-  padding: 15px;
-  background-color: #f8f9fa;
-  border-left: 1px solid #dee2e6;
-  position: fixed;
-  left: 0;
-  height: 100%;
-  width: 250px;
+.filters {
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
 }
