--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,4 +1,6 @@
-<div class="container">
-  <app-filters (filtersChange)="onFiltersChange($event)"></app-filters>
-  <app-product-list [filters]="filters"></app-product-list>
+<div class="container mx-auto flex flex-col md:flex-row mt-4">
+  <app-filters (filtersChange)="onFiltersChange($event)" class="w-full md:w-1/4"></app-filters>
+  <div class="w-full md:w-3/4">
+    <app-product-list [filters]="filters"></app-product-list>
+  </div>
 </div>
