--- a/src/app/components/shop/filters/filters.component.html
+++ b/src/app/components/shop/filters/filters.component.html
@@ -1,20 +1,20 @@
-<div class="filters bg-white shadow-md p-4 rounded-lg">
-  <h4 class="text-lg font-semibold mb-4">Filters</h4>
+<div class="sidebar p-4 bg-white shadow-md rounded">
+  <h4 class="font-bold mb-4">Filters</h4>
   <div>
-    <h6 class="text-md font-medium mb-2">Paintings</h6>
+    <h6 class="font-semibold mb-2">Paintings</h6>
     <div class="mb-2">
-      <input type="checkbox" id="oil" (change)="onFilterChange('paintings', 'OIL', $event)" [checked]="isChecked('paintings', 'OIL')">
-      <label for="oil" class="ml-2">Oil</label>
+      <input type="checkbox" id="oil" (change)="onFilterChange('paintings', 'OIL', $event)" [checked]="isChecked('paintings', 'OIL')" class="mr-2">
+      <label for="oil">Oil</label>
     </div>
     <div class="mb-2">
-      <input type="checkbox" id="monotype" (change)="onFilterChange('paintings', 'MONOTYPE', $event)" [checked]="isChecked('paintings', 'MONOTYPE')">
-      <label for="monotype" class="ml-2">Monotype</label>
+      <input type="checkbox" id="monotype" (change)="onFilterChange('paintings', 'MONOTYPE', $event)" [checked]="isChecked('paintings', 'MONOTYPE')" class="mr-2">
+      <label for="monotype">Monotype</label>
     </div>
-    <div class="mb-2">
-      <input type="checkbox" id="print" (change)="onFilterChange('paintings', 'PRINT', $event)" [checked]="isChecked('paintings', 'PRINT')">
-      <label for="print" class="ml-2">Print</label>
+    <div class="mb-4">
+      <input type="checkbox" id="print" (change)="onFilterChange('paintings', 'PRINT', $event)" [checked]="isChecked('paintings', 'PRINT')" class="mr-2">
+      <label for="print">Print</label>
     </div>
+    <button (click)="applyFilters()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Apply</button>
+    <button (click)="resetFilters()" class="w-full bg-gray-300 text-gray-700 py-2 mt-2 rounded hover:bg-gray-400">Reset</button>
   </div>
-  <button (click)="applyFilters()" class="w-full bg-blue-600 text-white py-2 mt-4 rounded hover:bg-blue-700">Apply</button>
-  <button (click)="resetFilters()" class="w-full bg-gray-300 text-gray-700 py-2 mt-2 rounded hover:bg-gray-400">Reset</button>
 </div>
