--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,20 +1,22 @@
-<footer class="footer bg-dark text-light py-3">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="footer-links">
-      <a routerLink="/terms" class="text-light mx-3">Terms</a>
-      <a routerLink="/payment-shipping" class="text-light mx-3">Payments</a>
-      <a routerLink="/returns" class="text-light mx-3">Returns</a>
+<footer class="bg-gray-800 text-white py-6">
+  <div class="container mx-auto text-center">
+    <h2 class="text-lg font-bold mb-4">artShop</h2>
+    <div class="flex justify-center space-x-6 mb-4">
+      <a routerLink="/terms" class="text-white hover:text-gray-400">Terms</a>
+      <a routerLink="/payment-shipping" class="text-white hover:text-gray-400">Payments</a>
+      <a routerLink="/returns" class="text-white hover:text-gray-400">Returns</a>
     </div>
-    <div class="footer-social">
-      <a href="https://facebook.com" target="_blank" class="text-light mx-2">
+    <div class="flex justify-center space-x-6 mb-4">
+      <a href="https://facebook.com" target="_blank" class="text-white hover:text-gray-400">
         <i class="fab fa-facebook"></i>
       </a>
-      <a href="https://twitter.com" target="_blank" class="text-light mx-2">
+      <a href="https://twitter.com" target="_blank" class="text-white hover:text-gray-400">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://instagram.com" target="_blank" class="text-light mx-2">
+      <a href="https://instagram.com" target="_blank" class="text-white hover:text-gray-400">
         <i class="fab fa-instagram"></i>
       </a>
     </div>
+    <p class="text-sm">&copy; 2024 artShop | All rights reserved</p>
   </div>
 </footer>
