--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-header></app-header>
-<div class="container mt-4">
-  <router-outlet></router-outlet>
+<div class="min-h-screen flex flex-col">
+  <header>
+    <app-header></app-header>
+  </header>
+  <main class="flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+  <footer class="mt-auto">
+    <app-footer></app-footer>
+  </footer>
 </div>
-<app-footer></app-footer>
