--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,15 @@ footer {
   padding: 1rem 0;
 }
 
+.navbar {
+  justify-content: center;
+  display: flex;
+}
+
+.navbar > div {
+  width: auto;
+}
+
 .navbar-brand {
   display: flex;
   justify-content: center;
@@ -67,4 +76,42 @@ footer {
 .nav-item.dropdown:hover .dropdown-menu {
   display: block;
   margin-top: 0;
+}
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #e2e8f0; /* Light border color */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
+  overflow: hidden; /* Ensure content doesn't overflow the card */
+  transition: transform 0.2s ease-in-out; /* Smooth transition for hover effect */
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: translateY(-4px); /* Lift the card slightly on hover */
+}
+
+.card-img-top {
+  object-fit: cover;
+  height: 250px; /* Set your desired height */
+  width: 100%; /* Ensure the image takes up the full width of the card */
+  border-bottom: 1px solid #e2e8f0; /* Border between image and card body */
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  padding: 15px; /* Add some padding inside the card body */
+}
+
+.card-text {
+  font-size: 1rem; /* Adjust font size */
+  color: #333; /* Darker text color */
+  margin-bottom: 8px; /* Space below the text */
+}
+
+.text-muted {
+  color: #718096; /* Lighter text color for muted text */
 }
