Changes to navbar component

--- a/src/app/components/header/navbar/navbar.component.css
+++ b/src/app/components/header/navbar/navbar.component.css
@@ -1,6 +1,12 @@
 .dropdown-menu {
   display: none;
 }
+.group:hover .dropdown-menu,
+.group:focus-within .dropdown-menu,
+[aria-expanded="true"] + .dropdown-menu {
+  display: block;
+}
+
 .group:hover .dropdown-menu {
   display: block;
 }
