--- a/src/app/components/shop/painting-detail/painting-detail.component.html
+++ b/src/app/components/shop/painting-detail/painting-detail.component.html
@@ -8,7 +8,12 @@
       <h2 class="text-2xl font-bold mb-4">{{ painting.name }}</h2>
       <p class="text-lg mb-4">{{ painting.length }} cm x {{ painting.width }} cm</p>
       <p class="price text-xl text-red-600 mb-4">{{ painting.price | currency:'EUR' }}</p>
-      <button class="add-to-cart bg-red-600 text-white py-2 px-4 rounded hover:bg-red-700" (click)="addToCart()">Add to Cart</button>
+      <button
+        class="add-to-cart bg-red-600 text-white py-2 px-4 rounded hover:bg-red-700 w-32 text-center"
+        (click)="addToCart()"
+        [disabled]="isButtonDisabled">
+        {{ buttonText }}
+      </button>
     </div>
   </div>
 </div>
