Implementation of checkout component

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -38,7 +38,7 @@
         <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode" class="border p-2 w-full rounded mb-4">
       </div>
         <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-full bg-blue-500 text-white py-1 px-3 rounded text-sm">Apply Discount</button>
-      <button class="w-full bg-green-700 text-white py-2 rounded-lg mt-6">Proceed to checkout</button>
+      <a routerLink="/checkout" class="w-full bg-green-700 text-white py-2 rounded-lg mt-6">Proceed to checkout</a>
     </div>
   </div>
 </div>
