--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: black;
+  color: white;
 }
 
 .content {
@@ -77,6 +79,7 @@ footer {
   display: block;
   margin-top: 0;
 }
+
 .card {
   height: 100%;
   display: flex;
@@ -123,5 +126,3 @@ footer {
   position: relative;
   top: -10px;
 }
-
-
