--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: black;
+  background-color: white;
   color: white;
 }
 
