Changing logo from a png to a plain text

--- a/src/app/components/header/logo/logo.component.html
+++ b/src/app/components/header/logo/logo.component.html
@@ -1,3 +1,1 @@
-<a class="navbar-brand" href="/home">
-  <img src="assets/logo.png" alt="Logo" class="logo">
-</a>
+<a class="navbar-brand text-4xl text-gray-500 hover:text-gray-900 focus:outline-none" href="/home">Kamila Białkowska-Ismaił</a>
