--- a/src/app/components/header/navbar/navbar.component.css
+++ b/src/app/components/header/navbar/navbar.component.css
@@ -1,6 +1,56 @@
+/* Navbar specific styles */
+.navbar {
+  justify-content: center;
+  display: flex;
+}
+
+.navbar > div {
+  width: auto;
+}
+
+.navbar-brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.navbar-brand .logo {
+  max-width: 150%;
+  height: auto;
+}
+
+.navbar-nav .nav-link {
+  font-size: 2.5rem; /* Increased font size */
+  color: green;
+  font-weight: 500; /* Make navbar links medium bold */
+}
+
+.navbar-nav .nav-link:hover {
+  color: darkgreen;
+}
+
+.dropdown-menu {
+  background-color: white;
+  border: 2px solid lightgray;
+  padding: 1rem;
+}
+
+.dropdown-item {
+  font-size: 1.5rem; /* Increased font size */
+  color: green;
+  font-weight: 500; /* Make dropdown items medium bold */
+}
+
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+
 .dropdown-menu {
   display: none;
 }
+
 .group:hover .dropdown-menu,
 .group:focus-within .dropdown-menu,
 [aria-expanded="true"] + .dropdown-menu {
@@ -9,4 +59,18 @@
 
 .group:hover .dropdown-menu {
   display: block;
+}
+
+/* Additional styles for larger navbar */
+.navbar {
+  padding: 1rem 0;
+}
+
+.navbar-nav .nav-link {
+  padding: 0.5rem 1rem; /* Adjust padding */
+}
+
+button svg {
+  width: 3rem; /* Increase button icon size */
+  height: 3rem;
 }
