Change to an address of an instagram url

--- a/src/app/components/header/additional-elements/additional-elements.component.html
+++ b/src/app/components/header/additional-elements/additional-elements.component.html
@@ -1,5 +1,5 @@
 <div class="additional-elements d-flex justify-content-center align-items-center">
-  <a href="https://instagram.com" target="_blank" class="social-icon">
+  <a href="https://www.instagram.com/kamila_bialkowskaismail/" target="_blank" class="social-icon">
     <i class="fab fa-instagram"></i>
   </a>
   <span class="pipe mx-2">|</span>
