--- a/src/app/components/shop/painting-detail/painting-detail.component.html
+++ b/src/app/components/shop/painting-detail/painting-detail.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="painting" class="painting-detail max-w-4xl mx-auto p-4">
-  <div class="breadcrumb text-sm text-gray-600 mb-4">
-    Home / {{ painting.name }} "Huile sur toile, {{ painting.length }} cm x {{ painting.width }} cm"
-  </div>
+<!--  <div class="breadcrumb text-sm text-gray-600 mb-4">-->
+<!--    Home / {{ painting.name }} "Huile sur toile, {{ painting.length }} cm x {{ painting.width }} cm"-->
+<!--  </div>-->
   <div class="painting-info flex gap-6 items-start">
     <img class="painting-image w-1/2 h-auto shadow-lg" [src]="painting.imageUrl" alt="{{ painting.name }}">
     <div class="painting-details flex-1">
-      <h2 class="text-2xl font-bold mb-4">{{ painting.name }}</h2>
-      <p class="text-lg mb-4">{{ painting.length }} cm x {{ painting.width }} cm</p>
+      <h2 class="text-2xl font-bold text-black mb-4">{{ painting.name }}</h2>
+      <p class="text-lg text-black mb-4">{{ painting.length }} cm x {{ painting.width }} cm</p>
       <p class="price text-xl text-red-600 mb-4">{{ painting.price | currency:'EUR' }}</p>
       <button
         class="add-to-cart bg-red-600 text-white py-2 px-4 rounded hover:bg-red-700 w-32 text-center"
