Padding changed to 10

--- a/src/app/components/header/logo/logo.component.html
+++ b/src/app/components/header/logo/logo.component.html
@@ -1,1 +1,1 @@
-<a class="navbar-brand text-4xl text-gray-500 hover:text-gray-900 focus:outline-none" href="/home">Kamila Białkowska-Ismaił</a>
+<a class="navbar-brand text-4xl text-gray-500 hover:text-gray-900 focus:outline-none py-10" href="/home">Kamila Białkowska-Ismaił</a>
