--- a/src/app/components/header/navbar/navbar.component.css
+++ b/src/app/components/header/navbar/navbar.component.css
@@ -22,12 +22,12 @@
 
 .navbar-nav .nav-link {
   font-size: 2.5rem; /* Increased font size */
-  color: green;
+  color: gray;
   font-weight: 500; /* Make navbar links medium bold */
 }
 
 .navbar-nav .nav-link:hover {
-  color: darkgreen;
+  color: gray;
 }
 
 .dropdown-menu {
@@ -38,7 +38,7 @@
 
 .dropdown-item {
   font-size: 1.5rem; /* Increased font size */
-  color: green;
+  color: gray;
   font-weight: 500; /* Make dropdown items medium bold */
 }
 
