--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-gray-800 text-white py-6">
+<footer class="bg-gray-600 text-white p-8">
   <div class="container mx-auto text-center">
     <h2 class="text-lg font-bold mb-4">artShop</h2>
     <div class="flex justify-center space-x-6 mb-4">
