--- a/src/app/add-painting/add-painting.component.html
+++ b/src/app/add-painting/add-painting.component.html
@@ -43,7 +43,7 @@
     <input type="file" id="image" name="image" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" (change)="onFileChange($event)" required>
   </div>
 
-  <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
+  <button type="submit" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
 </form>
 </body>
 </html>
