Changes to colors to make everything gray

--- a/src/app/components/header/additional-elements/additional-elements.component.html
+++ b/src/app/components/header/additional-elements/additional-elements.component.html
@@ -3,5 +3,5 @@
     <i class="fab fa-instagram"></i>
   </a>
   <span class="pipe mx-2">|</span>
-  <button class="btn btn-primary translate-button">PL</button>
+  <button class="bg-white text-black px-2 py-1">PL</button>
 </div>
