--- a/src/app/components/shop/filters/filters.component.html
+++ b/src/app/components/shop/filters/filters.component.html
@@ -14,7 +14,7 @@
       <input type="checkbox" id="print" (change)="onFilterChange('paintings', 'PRINT', $event)" [checked]="isChecked('paintings', 'PRINT')" class="mr-2">
       <label for="print">Print</label>
     </div>
-    <button (click)="applyFilters()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Apply</button>
+    <button (click)="applyFilters()" class="w-full bg-gray-600 text-gray-100 py-2 rounded hover:bg-gray-500">Apply</button>
     <button (click)="resetFilters()" class="w-full bg-gray-300 text-gray-700 py-2 mt-2 rounded hover:bg-gray-400">Reset</button>
   </div>
 </div>
