--- a/src/app/add-painting/add-painting.component.html
+++ b/src/app/add-painting/add-painting.component.html
@@ -24,6 +24,11 @@
   </div>
 
   <div class="mb-4">
+    <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description:</label>
+    <input type="text" id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="newPainting.description" required>
+  </div>
+
+  <div class="mb-4">
     <label for="length" class="block text-gray-700 text-sm font-bold mb-2">Length:</label>
     <input type="number" id="length" name="length" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="newPainting.length" min="1" required>
   </div>
