--- a/src/app/components/shop/filters/filters.component.html
+++ b/src/app/components/shop/filters/filters.component.html
@@ -1,20 +1,60 @@
-<div class="sidebar p-4 bg-white shadow-md rounded">
-  <h4 class="font-bold text-black mb-4">Filters</h4>
-  <div>
-    <h6 class="font-semibold text-black mb-2">Paintings</h6>
-    <div class="text-black mb-2">
-      <input type="checkbox" id="oil" (change)="onFilterChange('paintings', 'OIL', $event)" [checked]="isChecked('paintings', 'OIL')" class="mr-2">
-      <label for="oil">Oil</label>
+<div class="flex justify-center flex-col items-center">
+  <div class="flex gap-8 mb-4">
+    <div class="relative group">
+      <div class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
+        <span class="text-sm font-medium"> Painting Type </span>
+        <span class="transition group-hover:-rotate-180">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+          </svg>
+        </span>
+      </div>
+      <div class="z-50 hidden group-hover:block absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white">
+        <ul class="space-y-1 border-t border-gray-200 p-4">
+          <li>
+            <label for="oil" class="inline-flex items-center gap-2">
+              <input type="checkbox" id="oil" (change)="onFilterChange('paintings', $event)" [checked]="isChecked('paintings', 'OIL')" class="size-5 rounded border-gray-300" value="OIL" />
+              <span class="text-sm font-medium text-gray-700">Oil</span>
+            </label>
+          </li>
+          <li>
+            <label for="monotype" class="inline-flex items-center gap-2">
+              <input type="checkbox" id="monotype" (change)="onFilterChange('paintings', $event)" [checked]="isChecked('paintings', 'MONOTYPE')" class="size-5 rounded border-gray-300" value="MONOTYPE" />
+              <span class="text-sm font-medium text-gray-700">Monotype</span>
+            </label>
+          </li>
+          <li>
+            <label for="print" class="inline-flex items-center gap-2">
+              <input type="checkbox" id="print" (change)="onFilterChange('paintings', $event)" [checked]="isChecked('paintings', 'PRINT')" class="size-5 rounded border-gray-300" value="PRINT" />
+              <span class="text-sm font-medium text-gray-700">Print</span>
+            </label>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="text-black mb-2">
-      <input type="checkbox" id="monotype" (change)="onFilterChange('paintings', 'MONOTYPE', $event)" [checked]="isChecked('paintings', 'MONOTYPE')" class="mr-2">
-      <label for="monotype">Monotype</label>
+    <div class="relative group">
+      <div class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
+        <span class="text-sm font-medium"> Price </span>
+        <span class="transition group-hover:-rotate-180">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+          </svg>
+        </span>
+      </div>
+      <div class="z-50 hidden group-hover:block absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white">
+        <div class="border-t border-gray-200 p-4">
+          <div class="flex justify-between gap-4">
+            <label for="FilterPriceFrom" class="flex items-center gap-2">
+              <span class="text-sm text-gray-600">$</span>
+              <input type="number" id="FilterPriceFrom" placeholder="From" class="w-full rounded-md border-gray-200 shadow-sm sm:text-sm" [(ngModel)]="filters.priceFrom" (input)="onInputChange('priceFrom', $event)" />
+            </label>
+            <label for="FilterPriceTo" class="flex items-center gap-2">
+              <span class="text-sm text-gray-600">$</span>
+              <input type="number" id="FilterPriceTo" placeholder="To" class="w-full rounded-md border-gray-200 shadow-sm sm:text-sm" [(ngModel)]="filters.priceTo" (input)="onInputChange('priceTo', $event)" />
+            </label>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="text-black mb-4">
-      <input type="checkbox" id="print" (change)="onFilterChange('paintings', 'PRINT', $event)" [checked]="isChecked('paintings', 'PRINT')" class="mr-2">
-      <label for="print">Print</label>
-    </div>
-    <button (click)="applyFilters()" class="w-full bg-gray-600 text-gray-100 py-2 rounded hover:bg-gray-500">Apply</button>
-    <button (click)="resetFilters()" class="w-full bg-gray-300 text-gray-700 py-2 mt-2 rounded hover:bg-gray-400">Reset</button>
   </div>
 </div>
