changing color of a Proceed to payment button and implementon redirection to /payment component

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -70,10 +70,10 @@
           <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
             <div></div>
             <div>
-              <button type="submit"
-                      class="w-full bg-gray-500 text-white py-2 px-4 rounded-md shadow hover:bg-green-700 transition duration-150">
-                Next
-              </button>
+              <a routerLink="/payment"
+                      class="w-full bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">
+                Proceed to payment
+              </a>
             </div>
             <div></div>
           </div>
